<resources>
    <string name="app_name">Unix/Human time converter</string>
    <string name="seven">7</string>
    <string name="UnixTime">Unix Time</string>
    <string name="leftEditText" />
    <string name="humaneDateTime">dd/MM/yyyy HH:mm:ss</string>
    <string name="rightEditText" />
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="backSpace">BackSpace</string>
    <string name="convert">CONVERT</string>
    <string name="setDataTimePicker"><![CDATA[setup data & time]]></string>
    <string name="setUpTime"><![CDATA[setup data & time]]></string>
    <string name="clearAll">clear all fields</string>
    <string name="Data">SETUP DATA</string>
    <string name="setTime">setup time</string>
</resources>
