<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.maxlukin.epochtimeconverter.ConverterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/valueLeftField"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:gravity="center"
            android:hint="@string/UnixTime"
            android:inputType="numberDecimal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/leftEditText"
            android:textSize="30sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/valueRightField"
            android:layout_width="335dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:gravity="center"
            android:hint="@string/humaneDateTime"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/rightEditText"
            android:textSize="30sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonConvert"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/convert"
            android:textSize="30sp"
            android:visibility="visible" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
